--- a/package.json
+++ b/package.json
@@ -6,16 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist -u \"github-actions-bot <support+actions@github.com>\""
+    "preview": "vite preview"
   },
   "dependencies": {
     "@types/dom-navigation": "^1.0.4",
     "lit": "^3.2.1"
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.5"
   }
